<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LocationActivity" >

    <TextView
        android:id="@+id/textLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_latitude"
        android:textSize="@dimen/label_text_size" />

    <EditText
        android:id="@+id/editTextLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textLatitude"
        android:layout_below="@+id/textLatitude"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="@dimen/edit_text_size" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textLatitude"
        android:layout_below="@+id/editTextLatitude"
        android:layout_marginTop="20dp"
        android:text="@string/text_longitude"
        android:textSize="@dimen/label_text_size" />

    <EditText
        android:id="@+id/editTextLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textLongitude"
        android:layout_below="@+id/textLongitude"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="@dimen/edit_text_size" />

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextLongitude"
        android:layout_alignRight="@+id/editTextLongitude"
        android:layout_below="@+id/editTextLongitude"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/buttonRandom"
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_random"
            android:textSize="@dimen/button_text_size"
            android:drawableLeft="@drawable/icon_random" />
        
        <Button
            android:id="@+id/buttonAddress"
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_getaddress"
            android:textSize="@dimen/button_text_size"
            android:drawableLeft="@drawable/icon_search" />

    </LinearLayout>

    <TextView
        android:id="@+id/textAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayoutButtons"
        android:layout_below="@+id/linearLayoutButtons"
        android:layout_marginTop="15dp"
        android:textSize="@dimen/title_text_size"
        android:freezesText="true" />

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textAddress"
        android:layout_below="@+id/textAddress"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/label_text_size"
        android:freezesText="true" />

</RelativeLayout>