<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddressActivity" >

    <TextView
        android:id="@+id/textAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_address"
        android:textSize="@dimen/label_text_size" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textAddress"
        android:layout_below="@+id/textAddress"
        android:lines="3"
        android:gravity="top"
        android:inputType="textMultiLine|textNoSuggestions"
        android:textSize="@dimen/edit_text_size" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextAddress"
        android:layout_below="@+id/editTextAddress"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/buttonClear"
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_clear"
            android:textSize="@dimen/button_text_size"
            android:drawableLeft="@drawable/icon_random" />

        <Button
            android:id="@+id/buttonLocation"
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_getlocation"
            android:textSize="@dimen/button_text_size"
            android:drawableLeft="@drawable/icon_search" />
    
    </LinearLayout>

    <TextView
        android:id="@+id/textLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayoutButtons"
        android:layout_below="@+id/linearLayoutButtons"
        android:layout_marginTop="25dp"
        android:textSize="@dimen/title_text_size"
        android:freezesText="true" />

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textLocation"
        android:layout_below="@+id/textLocation"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/label_text_size"
        android:freezesText="true" />

</RelativeLayout>